bk_ida/gccida/g2/fix_register
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/fix_register/src/regclass.c:1232:49: error: use of undeclared identifier 'what_option_2'
error( "can't use '%s' as a %s register", name, what_option_2[fixed][call_used]); 
                                                ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/fix_register/src/obj/regclass.o] Error 1
